--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-alert": "^2.0.0",
     "mapbox-gl": "^3.0.1",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert2": "^11.10.2"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.19",
