--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
+    "cookie": "^0.6.0",
     "js-alert": "^2.0.0",
+    "js-cookie": "^3.0.5",
     "mapbox-gl": "^3.0.1",
     "next": "14.0.4",
     "react": "^18",
