--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.4",
     "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
     "cookie": "^0.6.0",
