--- a/package.json
+++ b/package.json
@@ -14,16 +14,25 @@
     "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@zxing/browser": "^0.1.4",
+    "@zxing/library": "^0.20.0",
     "cookie": "^0.6.0",
+    "dynamsoft-javascript-barcode": "^9.6.33",
+    "instascan": "^1.0.0",
     "js-alert": "^2.0.0",
     "js-cookie": "^3.0.5",
+    "jsbarcode": "^3.11.6",
     "jsonwebtoken": "^9.0.2",
+    "jsqr": "^1.4.0",
     "mapbox-gl": "^3.0.1",
     "next": "14.0.4",
+    "quagga": "^0.12.1",
     "react": "^18",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^18",
     "react-router-dom": "^5.3.4",
-    "sweetalert2": "^11.10.2"
+    "sweetalert2": "^11.10.2",
+    "zxing-typescript": "^0.1.2"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.19",
