--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ericblade/quagga2": "^1.8.4",
     "@next/bundle-analyzer": "^14.1.0",
     "@react-pdf/renderer": "^3.3.4",
     "@types/cookie": "^0.6.0",
