--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ericblade/quagga2": "^1.8.4",
+    "@heroicons/react": "^2.1.3",
     "@next/bundle-analyzer": "^14.1.0",
     "@react-pdf/renderer": "^3.3.4",
     "@types/cookie": "^0.6.0",
