--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-barcode-reader": "^0.0.2",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^5.3.4",
     "sweetalert2": "^11.10.2",
     "swr": "^2.2.5",
